# q-e

./: .cmake-format  .editorconfig  .gitignore  .gitlab-ci-main.yml  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  DAILY_TEST  INSTALL  LAPACK  Makefile  PROBLEMI  README  README.configure  README.cvs  README.install  README.install_old  README.md  README_GPU.md  TODO  build_hipker.sh  callhtml.pl  calltree.pl  cl2html.pl  config.guess  configure  configure.ac  configure.msg.in  configure.new  configure.old  cvs2cl.pl  diff_branches.txt  eliashbergcom.f90  environment_variables  get_libmbd.sh  ifcmods.sh  make.rules.in  make.sys.in  (+4 more)
COUPLE/: CMakeLists.txt  Makefile  README
CPV/: CMakeLists.txt  Ford.md  Makefile  adjef.f90  atoms_type.f90  band_type.f90  berryion.f90  bessel.f90  bforceion.f90  blacs.f90  bmesh.f90  boxgrid.f90  brillouin.f90  cell_module.f90  cell_nose.f90  cg.f90  cg_sub.f90  cglib.f90  charge_types.f90  chargedensity.f90  chargemix.f90  chi2.f90  compute_fes_grads.f90  compute_scf.f90  cp_autopilot.f90  cp_emass.f90  cp_fpmd.f90  cp_interfaces.f90  cp_restart.f90  cp_version.f90  cpflush.f90  cplib.f90  cplib_meta.f90  cpr.f90  cpr_mod.f90  cprstart.f90  cprsub.f90  cptypes.f90  crayfft.f90  cutoffs.f90  (+150 more)
Doc/: BUGS  CMakeLists.txt  CREDITS  ChangeLog  ChangeLog.cp  ChangeLog.old  ChangeLog.pw  ExternalForceFields.tex  Hubbard_input.tex  INPUT.HOWTO  INPUT_BANDS  INPUT_CHDENS  INPUT_CP  INPUT_CPPP  INPUT_CPVIB  INPUT_D3  INPUT_D3.def  INPUT_DOS  INPUT_EFG  INPUT_FPMD  INPUT_GIPAW  INPUT_GIPAW.def  INPUT_Gamma  INPUT_LD1.def  INPUT_NC  INPUT_PH  INPUT_PH.def  INPUT_PP  INPUT_PP.def  INPUT_PROJWFC  INPUT_PROJWFC.def  INPUT_PW  INPUT_PW.def  INPUT_PWCOND  INPUT_PWCOND.def  INPUT_RAM  INPUT_XSPECTRA  INPUT_pw_export  MANUAL.FPMD-CP  Makefile  (+25 more)
EPW/: .dependencies  CMakeLists.txt  Makefile  README  epw.md  indabs_change.txt
FFTXlib/: CMakeLists.txt  FFTXlib.md  Makefile  README.TEST  README.md  block_distro.f90  fbuf2.f90  fft_buffers.f90  fft_error.f90  fft_fwinv.f90  fft_ggen.f90  fft_helper_subroutines.f90  fft_interfaces.f90  fft_parallel.f90  fft_parallel_2d.f90  fft_param.f90  fft_scalar.ARM_LIB.f90  fft_scalar.DFTI.f90  fft_scalar.ESSL.f90  fft_scalar.FFTW.f90  fft_scalar.FFTW3.f90  fft_scalar.SX6.f90  fft_scalar.cuFFT.f90  fft_scalar.f90  fft_scatter.f90  fft_scatter_2d.f90  fft_scatter_2d_gpu.f90  fft_scatter_gpu.f90  fft_smallbox.f90  fft_smallbox_type.f90  fft_stick.c  fft_support.f90  fft_test.f90  fft_types.f90  fftw.c  fftw.h  fftw_dp.c  fftw_interfaces.f90  fftw_sp.c  gen_test_params.py  (+12 more)
GUI/: CMakeLists.txt  Makefile  README
GWW/: CMakeLists.txt  Makefile
HP/: CMakeLists.txt  Makefile
KCW/: CMakeLists.txt  Makefile  diff_wrt_v7.1.txt  kcw.md
KS_Solvers/: CMakeLists.txt  Makefile  ks_solver_interfaces.fh  ks_solver_interfaces.h  make.gpu
LAXlib/: CMakeLists.txt  Makefile  README.TEST  cdiaghg.f90  distools.f90  dspev_drv.f90  export_gstart_2_solvers.f90  la_error.f90  la_helper.f90  la_interface_mod.f90  la_module.f90  la_param.f90  la_types.f90  laxlib.fh  laxlib.h  laxlib_hi.fh  laxlib_hi.h  laxlib_kinds.h  laxlib_low.fh  laxlib_low.h  laxlib_mid.fh  laxlib_mid.h  laxlib_param.fh  laxlib_param.h  make.depend  mp_diag.f90  ptoolkit.f90  rdiaghg.f90  set_mpi_comm_4_solvers.f90  test.f90  transto.f90  zhpev_drv.f90
LIBBEEF/: CMakeLists.txt  Makefile
LR_Modules/: CMakeLists.txt  Coul_cut_2D_ph.f90  Makefile  adddvepsi_us.f90  adddvhubscf.f90  adddvscf.f90  adddvscf_ph_mag.f90  addusdbec.f90  addusdbec_nc.f90  addusddenseq.f90  addusldos.f90  apply_dpot.f90  apply_dpot_mod.f90  apply_trev.f90  bo_lanczos_iter.f90  c_bands_ph.f90  ccg_psi.f90  ccgsolve_all.f90  cft_wave.f90  cg_psi.f90  cgsolve_all.f90  ch_psi_all.f90  ch_psi_all_complex.f90  check_q_points_sym.f90  commutator_Hx_psi.f90  commutator_Vhubx_psi.f90  compute_intq.f90  compute_vsgga.f90  dfpt_tetra_mod.f90  dgradcorr.f90  dnonloccorr.f90  dv_of_drho.f90  dv_rVV10.f90  dv_vdW_DF.f90  dynmat_sub.f90  ef_shift.f90  efermi_shift.f90  h_prec.f90  incdrhoscf.f90  incdrhoscf_nc.f90  (+46 more)
Modules/: CMakeLists.txt  Makefile  additional_kpoints.f90  allocate_fft_3drism.f90  atom.f90  atom_weight.f90  atomic_number.f90  atomic_wfc_mod.f90  autopilot.f90  basic_algebra_routines.f90  bcast_qes_module.f90  becmod.f90  becmod_gpu.f90  becmod_subs_gpu.f90  beef_interface.f90  berry_phase.f90  bfgs_module.f90  blockedQR.f90  bspline.f90  buffers_module.f90  bz_form.f90  capital.f90  cell_base.f90  cell_nose.f90  check_stop.f90  chempot.f90  chempot_lauerism.f90  clocks.f90  closure.f90  coarsegrained_vars.f90  command_line_options.f90  compute_dipole.f90  constants.f90  constraints_module.f90  control_flags.f90  copy_order_um_from_xml.f90  corrdipole_laue.f90  correctat0_vv.f90  correlation_gga.f90  correlation_gga_gpu.f90  (+352 more)
NEB/: CMakeLists.txt  Makefile  compute_fes_grads.f90  compute_scf.f90  input.f90  io_tools.f90  make.depend  neb.f90  path_base.f90  path_gen_inputs.f90  path_input_parameters_module.f90  path_io_routines.f90  path_io_units_module.f90  path_opt_routines.f90  path_read_cards_module.f90  path_read_namelists_module.f90  path_reparametrisation.f90  path_to_engine_fix_atom_pos.f90  set_defaults.f90  stop_run.f90  stop_run_path.f90  string_methods.f90  test_input_file.f90
PHonon/: CMakeLists.txt  Ford.md  Makefile
PIOUD/: CMakeLists.txt  Makefile
PP/: CMakeLists.txt  Makefile  add_shift_cc.f90  add_shift_lc.f90  add_shift_us.f90  addusdens1d.f90  atomic_wfc_nc_proj.f90  average.f90  avmain.f90  bands.f90  ccalbec_nc.f90  cft.f90  cgracsc.f90  chdens.f90  chmain.f90  compute_ppsi.f90  compute_sigma_avg.f90  cube.f90  cubicspinsym.f90  d_matrix_nc.f90  d_matrix_so.f90  dipole.f90  do_initial_state.f90  do_postproc.f90  do_shift_ew.f90  dos.f90  dosg.f90  dost.f90  efg.f90  elf.f90  epsilon.f90  ggen1d.f90  hexspinsym.f90  initial_state.f90  local_dos.f90  local_dos1d.f90  local_dos_mag.f90  make.depend  openfil_pp.f90  paw_postproc.f90  (+46 more)
PW/: CMakeLists.txt  Ford.md  Makefile  a2fmod.f90  aainit.f90  acfdt_in_pw.f90  add_bfield.f90  add_efield.f90  (+401 more)
(+12597 files in other folders)
